Ajustes en html y css, agregado de favicon

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blue Label</title>
+    <title>Inmobiliaria Blue Label</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="icon" type="image/png" href="source/img/blue-logo1.png">
+
     <!-- Enlace a FontAwesome para íconos -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
@@ -102,8 +105,6 @@
             </div>
         </section>
 
-        <!-- Sección Casas -->
-
         <div class="title">
             <div class="logo-left">
                 <img src="source/img/blue-logo1.png" alt="Logo Izquierdo" width="80px">
@@ -113,6 +114,8 @@
                 <img src="source/img/blue-logo1.png" alt="Logo derecho" width="80px">
             </div>
         </div>
+
+        <!-- Sección Casas -->
 
         <section id="houses">
             <article class="card">
@@ -186,6 +189,7 @@
         </div>
 
         <!-- Sección Apartamentos -->
+
         <section id="apartments">
             <article class="card">
                 <a href="https://youtube.com/..." target="_blank">
@@ -256,6 +260,7 @@
         </div>
 
         <!-- Sección Comerciales -->
+
         <section id="commercial">
 
             <article class="card">
@@ -328,6 +333,7 @@
         </div>
 
         <!-- Sección Rurales -->
+
         <section id="rural">
 
             <article class="card">
@@ -390,6 +396,7 @@
         </section>
 
         <!-- Sección Contacto -->
+
         <section id="contact">
             <div class="title">
                 <div class="logo-left">
