Actualizando README.md

--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="scripts.js"></script>
-    <script src="menu.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/menu.js"></script>
     <script src="https://kit.fontawesome.com/600261c1fb.js" crossorigin="anonymous"></script>
 </body>
 
