--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/title.css">
     <link rel="icon" type="image/png" href="source/img/blue-logo1.png">
 
     <!-- Enlace a FontAwesome para íconos -->
@@ -59,7 +60,7 @@
                 Tu navegador no soporta videos.
             </video>
             <div class="welcome-message">
-                <h2>Bienvenidos a Inmobiliaria Blue Label</h2>
+                <h2 id="titulo-animado">Bienvenidos a Inmobiliaria Blue Label</h2>
                 <p>Tu socio confiable en bienes raíces. <br>Encuentra la casa de tus sueños con nosotros.</p>
 
             </div>
@@ -119,7 +120,7 @@
 
         <section id="houses">
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1572120360610-d971b9d7767c?
                     q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid
@@ -134,7 +135,7 @@
             </article>
 
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?
                         q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=
@@ -148,11 +149,11 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1605276374104-dee2a0ed3cd6?q=80&w=2070&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="Casa 3">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Casa 3">
                     </div>
                     <div class="card-content">
                         <h3>Casa 3</h3>
@@ -162,11 +163,11 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1600585153490-76fb20a32601?q=80&w=2070&auto=
                         format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                        alt="Casa 4">
+                            alt="Casa 4">
                     </div>
                     <div class="card-content">
                         <h3>Casa 4</h3>
@@ -192,10 +193,11 @@
 
         <section id="apartments">
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1515263487990-61b07816b324?q=80&w=2070&auto=format&fit=
-                        crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Apartamento 1">
+                        crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Apartamento 1">
                     </div>
                     <div class="card-content">
                         <h3>Apartamento 1</h3>
@@ -206,11 +208,11 @@
             </article>
 
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1597047084993-bf337e09ede0?q=80&w=2070&auto=
                         format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                        alt="Apartamento 2">
+                            alt="Apartamento 2">
                     </div>
                     <div class="card-content">
                         <h3>Apartamento 2</h3>
@@ -220,11 +222,11 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1574362848149-11496d93a7c7?q=80&w=1984&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="Apartamento 3">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Apartamento 3">
                     </div>
                     <div class="card-content">
                         <h3>Apartamento 3</h3>
@@ -234,11 +236,11 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1576647296530-fa0e45d8ff8c?q=80&w=1974&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="Apartamento 4">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Apartamento 4">
                     </div>
                     <div class="card-content">
                         <h3>Apartamento 4</h3>
@@ -264,11 +266,11 @@
         <section id="commercial">
 
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1549479732-ee0adb0f5d32?q=80&w=2013&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="Local 1">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Local 1">
                     </div>
                     <div class="card-content">
                         <h3>Local 1</h3>
@@ -279,11 +281,11 @@
             </article>
 
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1481437156560-3205f6a55735?q=80&w=2095&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="Local 2">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Local 2">
                     </div>
                     <div class="card-content">
                         <h3>Local 2</h3>
@@ -293,11 +295,11 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1528698827591-e19ccd7bc23d?q=80&w=2076&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="Local 3">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Local 3">
                     </div>
                     <div class="card-content">
                         <h3>Local 3</h3>
@@ -307,11 +309,11 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1483070312440-c83f6a799f35?q=80&w=2070&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="Local 4">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Local 4">
                     </div>
                     <div class="card-content">
                         <h3>Local 4</h3>
@@ -337,7 +339,7 @@
         <section id="rural">
 
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1703150687528-7d10f18001e0?w=500&auto=
                         format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHByb3BpZWRh
@@ -352,11 +354,11 @@
             </article>
 
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://plus.unsplash.com/premium_photo-1697644693174-216346d85792?q=80&w=2072&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="propiedad 2">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="propiedad 2">
                     </div>
                     <div class="card-content">
                         <h3>Propiedad 2</h3>
@@ -366,11 +368,11 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener" >
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1414353220870-38cc1d0fbf76?q=80&w=1974&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="propiedad 3">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="propiedad 3">
                     </div>
                     <div class="card-content">
                         <h3>Propiedad 3</h3>
@@ -380,11 +382,11 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank">
+                <a href="https://youtube.com/..." target="_blank" rel="noopener" >
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1722610017035-220181f752de?q=80&w=1974&auto=
-                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                        alt="Propiedad 4">
+                        format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Propiedad 4">
                     </div>
                     <div class="card-content">
                         <h3>Propiedad 4</h3>
@@ -449,12 +451,13 @@
     </main>
     <!-- Footer -->
     <footer>
-        <p>&copy; 20235 INMOBILIARIA BLUE LABEL. Todos los derechos reservados.</p>
+        <p>&copy; 2025 INMOBILIARIA BLUE LABEL. Todos los derechos reservados.</p>
     </footer>
 
     <!-- Scripts -->
     <script src="js/scripts.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/title.js"></script>
     <script src="https://kit.fontawesome.com/600261c1fb.js" crossorigin="anonymous"></script>
 </body>
 
