--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inmobiliaria Blue Label</title>
+    <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -31,6 +32,9 @@
         <div class="logo-right">
             <img src="source/img/blue-logo1.png" alt="Logo Derecho">
         </div>
+        <button id="theme-toggle" title="Cambiar Tema">
+            <i class="fa-solid fa-moon"></i> <!-- Ícono de tema -->
+        </button>
     </header>
 
     <main id="container">
@@ -368,7 +372,7 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank" rel="noopener" >
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1414353220870-38cc1d0fbf76?q=80&w=1974&auto=
                         format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -382,7 +386,7 @@
                 </a>
             </article>
             <article class="card">
-                <a href="https://youtube.com/..." target="_blank" rel="noopener" >
+                <a href="https://youtube.com/..." target="_blank" rel="noopener">
                     <div class="card-image">
                         <img src="https://images.unsplash.com/photo-1722610017035-220181f752de?q=80&w=1974&auto=
                         format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -427,7 +431,7 @@
             <div class="social-links">
                 <a href="https://facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
                 <a href="https://instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                <a href="https://wa.me/1234567890" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
             </div>
             <div class="contact-info">
