--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/title.css">
+    <link rel="stylesheet" href="css/map.css">
     <link rel="icon" type="image/png" href="source/img/blue-logo1.png">
 
     <!-- Enlace a FontAwesome para íconos -->
@@ -443,11 +444,10 @@
             <!-- Modal del Mapa -->
             <div id="map-modal" class="modal">
                 <div class="modal-content">
-                    <span id="close-modal" role="button">&times;</span>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.494108962333!2d-56.172370423426656!
+                    <iframe title="Ubicación de Inmobiliaria Blue Label - Google Maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.494108962333!2d-56.172370423426656!
                     3d-34.86893677155484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f807aabfe63b1%3A0xb6f6776baeb3a995!
                     2sNuevocentro%20Shopping!5e0!3m2!1spt-BR!2suy!4v1741015445932!5m2!1spt-BR!2suy" width="400"
-                        height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                        height="400" allowfullscreen></iframe>
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
